--- a/3sem/OOP/lab3/.vscode/settings.json
+++ b/3sem/OOP/lab3/.vscode/settings.json
@@ -43,6 +43,9 @@
         "ostream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "ctime": "cpp",
+        "map": "cpp",
+        "sstream": "cpp"
     }
 }
