Add all fighters

--- a/3sem/OOP/cw/battle/Makefile
+++ b/3sem/OOP/cw/battle/Makefile
@@ -14,7 +14,7 @@ WINDOW_DIR=$(SRC_DIR)/libwindow
 COMPILE_SRC=$(MAIN_DIR)/main.cpp $(FIGHTER_DIR)/Fighter.cpp $(FIGHTER_DIR)/Hp.cpp
 
 all:
-	$(PP) $(PP_FLAGS) $(COMPILE_SRC) $(SFML_FLAGS) -o $(BUILD_DIR)/battle
+	$(PP) $(PP_FLAGS) $(COMPILE_SRC) $(SFML_FLAGS) -o battle
 
 run:
-	$(BUILD_DIR)/battle
+	./battle
