--- a/3sem/DSA/cw/.vscode/settings.json
+++ b/3sem/DSA/cw/.vscode/settings.json
@@ -46,6 +46,7 @@
         "streambuf": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "fstream": "cpp"
+        "fstream": "cpp",
+        "map": "cpp"
     }
 }
