--- a/3sem/DSA/cw/Makefile
+++ b/3sem/DSA/cw/Makefile
@@ -1,5 +1,5 @@
 GPP = g++
-FLAGS = -Wall 
+FLAGS = -Wall -Werror -Wextra
 SRC = src
 
 DICTS_DIR = Dicts
@@ -12,13 +12,14 @@ dbg:
 
 hashtab:
 	$(GPP) $(FLAGS) $(ALL_SRC) -o $(BUILD)/ht_exp
+
+# dicts
 run_dict_1:
 	$(BUILD)/ht_exp $(DICTS_DIR)/dict1.txt
 run_dict_2:
 	$(BUILD)/ht_exp ../$(DICTS_DIR)/dict2.txt
 run_dict_3:
 	$(BUILD)/ht_exp ../$(DICTS_DIR)/dict3.txt
-
 exp_add:
 	$(BUILD)/ht_exp $(DICTS_DIR)/dict_exp.txt
 
