--- a/3sem/DSA/.vscode/settings.json
+++ b/3sem/DSA/.vscode/settings.json
@@ -32,6 +32,7 @@
         "tuple": "cpp",
         "type_traits": "cpp",
         "typeinfo": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "stdio.h": "c"
     }
 }
