Add project with CI

--- a/4sem/AECS/Makefile
+++ b/4sem/AECS/Makefile
@@ -48,5 +48,11 @@ main_test.o: $(TEST_DIR)/main.c
 test.o: $(TEST_DIR)/test.c
 	$(CC) $(FLAGS) -I thirdparty -I src -c -o $(OBJ_TEST_DIR)/$@ $<
 
+run_test: $(EXE_DIR)/test_app
+	$(EXE_DIR)/test_app
+
+
+# CLEAN
+
 clean:
 	rm -rf build/lib/* build/exe/* build/obj/*/*
