--- a/5sem/ACS/lab-02/dockerapp/Dockerfile
+++ b/5sem/ACS/lab-02/dockerapp/Dockerfile
@@ -5,7 +5,7 @@ COPY . /dockerapp
 WORKDIR /dockerapp
 
 RUN apt-get update && apt-get install -y gcc g++
-RUN g++ --std=c++20 -o main main.c
+RUN g++ --std=c++20 -o main main.cpp
 
 STOPSIGNAL SIGINT
 
